src/styles/page.scss
@import "_utils/breakpoints";
@import "_utils/uads";

@mixin pageContainer() {
  width: 1312px;
  max-width: calc(100% - 48px);
  margin: 0 auto;
}

.page {
  display: flex;
  flex-direction: column;
  min-height: 100vh;

  &__contact {
    @include uads-a(
      $color: #ffffff,
      $color--active: #ffffff,
      $color--active-link: #ffffff,
      $color--active-visited: #ffffff,
      $color--visited: #ffffff,
      $cursor: pointer,
      $outline-color--active-link: currentColor,
      $outline-style--active-link: none,
      $outline-width--active-link: 1px,
      $outline-color--active-visited: currentColor,
      $outline-style--active-visited: none,
      $outline-width--active-visited: 1px,
      $outline-color--focus: currentColor,
      $outline-style--focus: none,
      $outline-width--focus: 1px,
      $text-decoration: none,
      $user-focus: normal,
      $user-select: element
    );
    display: flex;
    padding: 16px 0;
    align-items: center;
  }

  &__contact-icon {
    font-size: 16px;
    color: #eb922f;
    margin-right: 16px;

    svg {
      width: 1em;
      height: 1em;
      display: flex;
    }
  }

  &__contact-label {
    font-weight: 300;
    font-size: 16px;
    line-height: 19px;
  }

  &__content {
    background: #eff1f4;
    flex-grow: 1;
    padding: 40px 0;
  }

  &__content-container {
    @include pageContainer;
    position: relative; // need "position: relative" for logout-button to be positioned correctly
  }

  &__footer {
    background: #2b2b2b;
    color: #ffffff;
  }

  &__footer-container {
    @include pageContainer;
  }

  &__footer-section {
    padding: 40px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;

    &:first-child {
      border-bottom: 1px solid #cecece;
    }
  }

  &__header {
    padding: 40px 0;
    background: #ffffff;
  }

  &__header-container {
    @include pageContainer;
    display: flex;
    align-items: center;
  }

  &__header-menu {
    flex-grow: 1;
    display: flex;
    justify-content: flex-end;
    padding-right: 36px,
  }

  &__logo {
    @include uads-a(
      $color: inherit,
      $color--active: inherit,
      $color--active-link: inherit,
      $color--active-visited: inherit,
      $color--visited: inherit,
      $cursor: pointer,
      $outline-color--active-link: currentColor,
      $outline-style--active-link: none,
      $outline-width--active-link: 1px,
      $outline-color--active-visited: currentColor,
      $outline-style--active-visited: none,
      $outline-width--active-visited: 1px,
      $outline-color--focus: currentColor,
      $outline-style--focus: none,
      $outline-width--focus: 1px,
      $text-decoration: none,
      $user-focus: normal,
      $user-select: element
    );
    display: flex;
  }

  &__logo-image {
    display: block;
  }

  &__mobile-toolbar {
    display: none;
  }

  @media (max-width: $bp-max-tablet) {
    &__content {
      padding: 32px 0;
    }

    &__content-container {
      max-width: calc(100% - 140px);
    }

    &__header-menu {
      padding-right: 0;
    }
  }

  @media (max-width: $bp-max-mobile-landscape) {
    &__content {
      background: #ffffff;
      padding: 24px 0;
      margin-bottom: 74px;
      margin-top: 84px;
    }

    &__content-container {
      max-width: calc(100% - 48px);
    }

    &__footer {
      display: none;
    }

    &__header {
      padding: 24px 0;
      box-shadow: 0px 0px 10px rgba(201, 200, 200, 0.5);
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      z-index: 1;
    }

    &__header-menu {
      display: none;
    }

    &__logo-image {
      height: 36px;
    }

    &__mobile-toolbar {
      display: block;
      color: #acacac;
      position: fixed;
      bottom: 0;
      width: 100%;
    }

    &__mobile-toolbar-cta {
      padding: 24px;
    }
  }
}

